
2009-02-24 cjg + dct
 * Tidyup & refactoring on FormatRisks plugin.

2009-02-24 cjg + dct
 * tidying up the tidyup on formatrisks.

2009-02-25 cjg
 * Added InputForm::UploadMethod plugins
 * These are now used by the Upload component to allow new tabs to be added.
 * Tiditied up tabs css and widened the tabs a little.
 * A processor is now passed to the workflow and component get_state_params
 * Improved handling of the logic on which documents to show unrolled.

2009-02-26 tdb
 * Fixed OAI GetRecord always returning a record, fixing #3498

2009-02-27 tdb
 * Only decode strings returned from the XML library if they aren't utf8
 * Set the output encoding (in header or file handle) in Export plugins

2009-03-04 tdb
 * Added a field property "sql_counter"
 * Added "sql_counter"s to all keyfields that use counters
 * Datasets can now be defined per-repository using $c->{datasets}
 * Counters are now created based on field definitions
 * Added example custom dataset

2009-03-17 cjg
 * Document toolbox document add now reports document id rather than "OK"
 * Fixed bug in Field::Multi which didn't allow <help> in both the component
    and inside the field.
 * Added temporary conf settings to bin/toolbox to allow file & web import.

2009-03-17 cjg
 * Updated a search in User.pm to the new API.

2009-03-20 cjg
 * Added edit locking.

2009-03-25 tdb
 * Share system phrases across repositories

2009-03-25 tdb
 * Include the XHTML namespace in HTML output

2009-03-26 tdb
 * Share fields between inbox/buffer/archive/deletion (stored in eprint)

2009-03-27 tdb
 * Fixed to_string() calls not specifying noxmlns in Views (McSweeney)

2009-03-27 tdb
 * Modified index_queue to be a dataset
 * Added get_value_from_id method to MetaField
 * Refined EPrints::MetaField::Name::get_id_from_value to handle colons
 * If a name is defined all parts must be defined (""), fixing #3483

2009-03-30 tdb
 * Added upgrade to DB schema 3.1.2 - fix null parts of names
