@@ -2,22 +2,26 @@
 function ep_autocompleter( element, target, url, basenames, width_of_these, fields_to_send, extra_params )
 {
   new Ajax.Autocompleter( element, target, url, {
+    indicator: target+'_loading',
     callback: function( el, entry ) { 
+
+      var w = width_of_these.inject( 0, function( acc, cell, index ) { 
+        return acc + Element.getDimensions(cell).width; } );
+      $(target).style.position = 'absolute';
+      Position.clone(element, $(target), {
+        setWidth: false, 
+        setHeight: false, 
+        setLeft: false, 
+        offsetTop: element.offsetHeight });
+      $(target).style.width  = w + 'px';
+      $(target+"_loading").style.width  = w + 'px';
+
       var params = fields_to_send.inject( entry, function( acc, rel_id, index ) { 
         return acc + '&' + rel_id + '=' + $F(basenames.relative + rel_id); } );
       return params + extra_params;
     },
     paramName: 'q',
     onShow: function(element, update){
-      var w = width_of_these.inject( 0, function( acc, cell, index ) { 
-        return acc + Element.getDimensions(cell).width; } );
-      update.style.position = 'absolute';
-      Position.clone(element, update, {
-        setWidth: false, 
-        setHeight: false, 
-        setLeft: false, 
-        offsetTop: element.offsetHeight });
-      update.style.width  = w + 'px';
       Effect.Appear(update,{duration:0.15});
     },
     updateElement: function( selected ) {
