@@ -8114,3 +8114,5 @@ EPRINTS-3.1-beta-2
 2009-03-30 tdb
  * Added upgrade to DB schema 3.1.2 - fix null parts of names
 
+2009-03-30 cjg
+ * Added spinny ajax loading icon to autocompleter.
